Bump version 8.27 -> 8.28 + restore Java 8 compatibility (fix #750)
Releases 8.25 / 8.27 were compiled with maven.compiler.target=11 (commit
6bb67ae raised it from 1.8), so the released JARs had class file major
version 55 and refused to launch under any JRE 8. macOS users saw the
generic "Java Application launch failed" stub dialog; Windows users with
Oracle/Adoptium JRE 8 got UnsupportedClassVersionError. 8.23 still
worked for them because its release was cut before that commit and
shipped class file major 52.

Revert source/target to 1.8 and rewrite the single Java 11-only call
site (Files.readString in FileMergerDialog) using readAllBytes + new
String(..., UTF_8). Verified: locally built 8.28 JAR has class file
major 52 in every project class and starts cleanly under Temurin 11.