@@ -146,7 +146,7 @@ public class FileMergerDialog extends javax.swing.JDialog {
 
         if (Files.exists(Paths.get(_file_name_full + ".sha1"))) {
 
-            String sha1 = Files.readString(Paths.get(_file_name_full + ".sha1")).toLowerCase().trim();
+            String sha1 = new String(Files.readAllBytes(Paths.get(_file_name_full + ".sha1")), java.nio.charset.StandardCharsets.UTF_8).toLowerCase().trim();
 
             MiscTools.GUIRunAndWait(() -> {
                 merge_button.setText(LabelTranslatorSingleton.getInstance().translate("CHECKING FILE INTEGRITY, please wait..."));
